Fix input text color for dark mode

--- a/styles.css
+++ b/styles.css
@@ -235,5 +235,6 @@ label,
   }
   input {
     background-color: #272727;
+    color: #ccc;
   }
 }
